eks-ecr/app1-deploy-nodeport-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-ecr-deploy
  labels: 
    app: eks-ecr-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-ecr-app
  template:
    metadata:
      labels: 
        app: eks-ecr-app
    spec: 
      containers: 
        - name: eks-ecr-app
          image: 359524518288.dkr.ecr.us-east-1.amazonaws.com/eks-repo1:1.0.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: eks-ecr-nodeport-svc
  labels: 
    app: eks-ecr-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: eks-ecr-app
  ports:
    - targetPort: 80
      port: 80
